app/ql/y.output

state 0
	$accept: .start $end 
	start: .    (2)
	cmd: .    (16)

	$end  reduce 2 (src line 37)
	error  shift 6
	NAME  shift 17
	NL  reduce 16 (src line 127)
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	FUNC  shift 8
	OR  reduce 16 (src line 127)
	AND  reduce 16 (src line 127)
	'{'  shift 22
	'<'  shift 18
	'|'  shift 15
	';'  reduce 16 (src line 127)
	'$'  shift 28
	.  error

	cmd  goto 10
	pipe  goto 11
	simple  goto 20
	var  goto 12
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19
	cond  goto 4
	ors  goto 7
	ands  goto 9
	start  goto 1
	topcmds  goto 2
	topcmd  goto 3
	func  goto 5
	source  goto 13

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  topcmds.    (1)
	topcmds:  topcmds.topcmd 
	cmd: .    (16)

	$end  reduce 1 (src line 35)
	error  shift 6
	NAME  shift 17
	NL  reduce 16 (src line 127)
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	FUNC  shift 8
	OR  reduce 16 (src line 127)
	AND  reduce 16 (src line 127)
	'{'  shift 22
	'<'  shift 18
	'|'  shift 15
	';'  reduce 16 (src line 127)
	'$'  shift 28
	.  error

	cmd  goto 10
	pipe  goto 11
	simple  goto 20
	var  goto 12
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19
	cond  goto 4
	ors  goto 7
	ands  goto 9
	topcmd  goto 34
	func  goto 5
	source  goto 13

state 3
	topcmds:  topcmd.    (4)

	.  reduce 4 (src line 42)


state 4
	topcmd:  cond.sep 

	NL  shift 36
	';'  shift 37
	.  error

	sep  goto 35

state 5
	topcmd:  func.sep 

	NL  shift 36
	';'  shift 37
	.  error

	sep  goto 38

state 6
	topcmd:  error.NL 

	NL  shift 39
	.  error


state 7
	cond:  ors.    (8)
	ors:  ors.OR ands 

	OR  shift 40
	.  reduce 8 (src line 70)


state 8
	func:  FUNC.NAME '{' subcmds '}' 

	NAME  shift 41
	.  error


state 9
	ors:  ands.    (10)
	ands:  ands.AND cmd 

	AND  shift 42
	.  reduce 10 (src line 91)


state 10
	ands:  cmd.    (12)

	.  reduce 12 (src line 103)


state 11
	cmd:  pipe.optbg 
	optbg: .    (58)

	'&'  shift 44
	.  reduce 58 (src line 411)

	optbg  goto 43

state 12
	cmd:  var.    (14)

	.  reduce 14 (src line 118)


state 13
	cmd:  source.    (15)

	.  reduce 15 (src line 122)


state 14
	pipe:  xpipe.    (29)
	xpipe:  xpipe.pipeop optname $$32 opt_nl simplerdr 

	GFPIPE  shift 47
	'|'  shift 46
	.  reduce 29 (src line 217)

	pipeop  goto 45

state 15
	pipe:  '|'.xpipe 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'$'  shift 28
	.  error

	simple  goto 20
	xpipe  goto 48
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 16
	pipe:  INPIPE.xpipe 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'$'  shift 28
	.  error

	simple  goto 20
	xpipe  goto 50
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 17
	var:  NAME.'=' name 
	var:  NAME.'=' inblk 
	var:  NAME.'=' '{' names '}' 
	var:  NAME.'[' NAME ']' '=' name 
	var:  NAME.'[' NAME ']' '=' inblk 
	var:  NAME.'[' NAME ']' '=' '{' names '}' 
	var:  NAME.'=' '{' maps '}' 
	name:  NAME.    (83)

	'['  shift 52
	'='  shift 51
	.  reduce 83 (src line 573)


state 18
	source:  '<'.NAME 

	NAME  shift 53
	.  error


state 19
	xpipe:  simplerdr.    (34)

	.  reduce 34 (src line 265)


state 20
	simplerdr:  simple.optredirs 
	optredirs: .    (44)

	APP  shift 61
	'<'  shift 59
	'>'  shift 60
	.  reduce 44 (src line 333)

	redir  goto 56
	inredir  goto 57
	outredir  goto 58
	optredirs  goto 54
	redirs  goto 55

state 21
	simple:  names.    (36)
	names:  names.name 
	names:  names.inblk 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'$'  shift 28
	.  reduce 36 (src line 282)

	name  goto 62
	inblk  goto 63

state 22
	simple:  '{'.subcmds '}' 
	$$17: .    (17)

	.  reduce 17 (src line 135)

	subcmds  goto 64
	$$17  goto 65

state 23
	simple:  TEEBLK.subcmds '}' 
	$$17: .    (17)

	.  reduce 17 (src line 135)

	subcmds  goto 66
	$$17  goto 65

state 24
	simple:  FOR.names '{' $$39 subcmds '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'$'  shift 28
	.  error

	names  goto 67
	name  goto 26
	inblk  goto 27

state 25
	simple:  WHILE.pipe '{' $$41 subcmds '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'|'  shift 15
	'$'  shift 28
	.  error

	pipe  goto 68
	simple  goto 20
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 26
	names:  name.    (81)
	name:  name.'^' name 

	'^'  shift 69
	.  reduce 81 (src line 561)


state 27
	names:  inblk.    (82)

	.  reduce 82 (src line 566)


state 28
	name:  '$'.NAME 
	name:  '$'.'^' NAME 
	name:  '$'.NAME '[' NAME ']' 

	NAME  shift 70
	'^'  shift 71
	.  error


state 29
	name:  LEN.NAME 

	NAME  shift 72
	.  error


state 30
	inblk:  INBLK.$$66 pipe '}' 
	$$66: .    (66)

	.  reduce 66 (src line 455)

	$$66  goto 73

state 31
	inblk:  RAWINBLK.$$68 pipe '}' 
	$$68: .    (68)

	.  reduce 68 (src line 472)

	$$68  goto 74

state 32
	inblk:  SINGLEINBLK.$$70 pipe '}' 
	$$70: .    (70)

	.  reduce 70 (src line 488)

	$$70  goto 75

state 33
	inblk:  PIPEBLK.$$72 pipe '}' 
	$$72: .    (72)

	.  reduce 72 (src line 504)

	$$72  goto 76

state 34
	topcmds:  topcmds topcmd.    (3)

	.  reduce 3 (src line 40)


state 35
	topcmd:  cond sep.    (5)

	.  reduce 5 (src line 46)


state 36
	sep:  NL.    (77)

	.  reduce 77 (src line 541)


state 37
	sep:  ';'.    (78)

	.  reduce 78 (src line 546)


state 38
	topcmd:  func sep.    (6)

	.  reduce 6 (src line 59)


state 39
	topcmd:  error NL.    (7)

	.  reduce 7 (src line 60)


state 40
	ors:  ors OR.ands 
	cmd: .    (16)

	NAME  shift 17
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'<'  shift 18
	'|'  shift 15
	'$'  shift 28
	.  reduce 16 (src line 127)

	cmd  goto 10
	pipe  goto 11
	simple  goto 20
	var  goto 12
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19
	ands  goto 77
	source  goto 13

state 41
	func:  FUNC NAME.'{' subcmds '}' 

	'{'  shift 78
	.  error


state 42
	ands:  ands AND.cmd 
	cmd: .    (16)

	NAME  shift 17
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'<'  shift 18
	'|'  shift 15
	'$'  shift 28
	.  reduce 16 (src line 127)

	cmd  goto 79
	pipe  goto 11
	simple  goto 20
	var  goto 12
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19
	source  goto 13

state 43
	cmd:  pipe optbg.    (13)

	.  reduce 13 (src line 110)


state 44
	optbg:  '&'.    (56)
	optbg:  '&'.NAME 

	NAME  shift 80
	.  reduce 56 (src line 402)


state 45
	xpipe:  xpipe pipeop.optname $$32 opt_nl simplerdr 
	optname: .    (26)

	'['  shift 82
	.  reduce 26 (src line 200)

	optname  goto 81

state 46
	pipeop:  '|'.    (27)

	.  reduce 27 (src line 206)


state 47
	pipeop:  GFPIPE.    (28)

	.  reduce 28 (src line 211)


state 48
	pipe:  '|' xpipe.    (30)
	xpipe:  xpipe.pipeop optname $$32 opt_nl simplerdr 

	GFPIPE  shift 47
	'|'  shift 46
	.  reduce 30 (src line 223)

	pipeop  goto 45

state 49
	name:  NAME.    (83)

	.  reduce 83 (src line 573)


state 50
	pipe:  INPIPE xpipe.    (31)
	xpipe:  xpipe.pipeop optname $$32 opt_nl simplerdr 

	GFPIPE  shift 47
	'|'  shift 46
	.  reduce 31 (src line 233)

	pipeop  goto 45

state 51
	var:  NAME '='.name 
	var:  NAME '='.inblk 
	var:  NAME '='.'{' names '}' 
	var:  NAME '='.'{' maps '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'{'  shift 85
	'$'  shift 28
	.  error

	name  goto 83
	inblk  goto 84

state 52
	var:  NAME '['.NAME ']' '=' name 
	var:  NAME '['.NAME ']' '=' inblk 
	var:  NAME '['.NAME ']' '=' '{' names '}' 

	NAME  shift 86
	.  error


state 53
	source:  '<' NAME.    (22)

	.  reduce 22 (src line 179)


state 54
	simplerdr:  simple optredirs.    (35)

	.  reduce 35 (src line 272)


state 55
	optredirs:  redirs.    (43)
	redirs:  redirs.redir 

	APP  shift 61
	'<'  shift 59
	'>'  shift 60
	.  reduce 43 (src line 328)

	redir  goto 87
	inredir  goto 57
	outredir  goto 58

state 56
	redirs:  redir.    (46)

	.  reduce 46 (src line 344)


state 57
	redir:  inredir.    (47)

	.  reduce 47 (src line 347)


state 58
	redir:  outredir.    (48)

	.  reduce 48 (src line 349)


state 59
	inredir:  '<'.optinname 
	optinname: .    (51)

	NAME  shift 89
	.  reduce 51 (src line 363)

	optinname  goto 88

state 60
	outredir:  '>'.optname NAME 
	outredir:  '>'.'[' NAME '=' NAME ']' 
	outredir:  '>'.'[' NAME ']' 
	optname: .    (26)

	'['  shift 91
	.  reduce 26 (src line 200)

	optname  goto 90

state 61
	outredir:  APP.optname NAME 
	optname: .    (26)

	'['  shift 82
	.  reduce 26 (src line 200)

	optname  goto 92

state 62
	names:  names name.    (79)
	name:  name.'^' name 

	'^'  shift 69
	.  reduce 79 (src line 552)


state 63
	names:  names inblk.    (80)

	.  reduce 80 (src line 557)


state 64
	simple:  '{' subcmds.'}' 

	'}'  shift 93
	.  error


state 65
	subcmds:  $$17.xsubcmds 
	cmd: .    (16)

	NAME  shift 17
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'<'  shift 18
	'|'  shift 15
	'$'  shift 28
	.  reduce 16 (src line 127)

	xsubcmds  goto 94
	cmd  goto 10
	pipe  goto 11
	simple  goto 20
	var  goto 12
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19
	cond  goto 95
	ors  goto 7
	ands  goto 9
	source  goto 13

state 66
	simple:  TEEBLK subcmds.'}' 

	'}'  shift 96
	.  error


state 67
	simple:  FOR names.'{' $$39 subcmds '}' 
	names:  names.name 
	names:  names.inblk 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'{'  shift 97
	'$'  shift 28
	.  error

	name  goto 62
	inblk  goto 63

state 68
	simple:  WHILE pipe.'{' $$41 subcmds '}' 

	'{'  shift 98
	.  error


state 69
	name:  name '^'.name 

	NAME  shift 49
	LEN  shift 29
	'$'  shift 28
	.  error

	name  goto 99

state 70
	name:  '$' NAME.    (84)
	name:  '$' NAME.'[' NAME ']' 

	'['  shift 100
	.  reduce 84 (src line 579)


state 71
	name:  '$' '^'.NAME 

	NAME  shift 101
	.  error


state 72
	name:  LEN NAME.    (87)

	.  reduce 87 (src line 594)


state 73
	inblk:  INBLK $$66.pipe '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'|'  shift 15
	'$'  shift 28
	.  error

	pipe  goto 102
	simple  goto 20
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 74
	inblk:  RAWINBLK $$68.pipe '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'|'  shift 15
	'$'  shift 28
	.  error

	pipe  goto 103
	simple  goto 20
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 75
	inblk:  SINGLEINBLK $$70.pipe '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'|'  shift 15
	'$'  shift 28
	.  error

	pipe  goto 104
	simple  goto 20
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 76
	inblk:  PIPEBLK $$72.pipe '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	TEEBLK  shift 23
	PIPEBLK  shift 33
	LEN  shift 29
	INPIPE  shift 16
	FOR  shift 24
	WHILE  shift 25
	'{'  shift 22
	'|'  shift 15
	'$'  shift 28
	.  error

	pipe  goto 105
	simple  goto 20
	xpipe  goto 14
	names  goto 21
	name  goto 26
	inblk  goto 27
	simplerdr  goto 19

state 77
	ors:  ors OR ands.    (9)
	ands:  ands.AND cmd 

	AND  shift 42
	.  reduce 9 (src line 86)


state 78
	func:  FUNC NAME '{'.subcmds '}' 
	$$17: .    (17)

	.  reduce 17 (src line 135)

	subcmds  goto 106
	$$17  goto 65

state 79
	ands:  ands AND cmd.    (11)

	.  reduce 11 (src line 98)


state 80
	optbg:  '&' NAME.    (57)

	.  reduce 57 (src line 407)


state 81
	xpipe:  xpipe pipeop optname.$$32 opt_nl simplerdr 
	$$32: .    (32)

	.  reduce 32 (src line 239)

	$$32  goto 107

state 82
	optname:  '['.NAME ']' 

	NAME  shift 108
	.  error


state 83
	var:  NAME '=' name.    (59)
	name:  name.'^' name 

	'^'  shift 69
	.  reduce 59 (src line 417)


state 84
	var:  NAME '=' inblk.    (60)

	.  reduce 60 (src line 423)


state 85
	var:  NAME '=' '{'.names '}' 
	var:  NAME '=' '{'.maps '}' 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'['  shift 112
	'$'  shift 28
	.  error

	maps  goto 110
	map  goto 111
	names  goto 109
	name  goto 26
	inblk  goto 27

state 86
	var:  NAME '[' NAME.']' '=' name 
	var:  NAME '[' NAME.']' '=' inblk 
	var:  NAME '[' NAME.']' '=' '{' names '}' 

	']'  shift 113
	.  error


state 87
	redirs:  redirs redir.    (45)

	.  reduce 45 (src line 339)


state 88
	inredir:  '<' optinname.    (49)

	.  reduce 49 (src line 353)


state 89
	optinname:  NAME.    (50)

	.  reduce 50 (src line 361)


state 90
	outredir:  '>' optname.NAME 

	NAME  shift 114
	.  error


state 91
	optname:  '['.NAME ']' 
	outredir:  '>' '['.NAME '=' NAME ']' 
	outredir:  '>' '['.NAME ']' 

	NAME  shift 115
	.  error


state 92
	outredir:  APP optname.NAME 

	NAME  shift 116
	.  error


state 93
	simple:  '{' subcmds '}'.    (37)

	.  reduce 37 (src line 288)


state 94
	subcmds:  $$17 xsubcmds.    (18)
	xsubcmds:  xsubcmds.sep cond 

	NL  shift 36
	';'  shift 37
	.  reduce 18 (src line 143)

	sep  goto 117

state 95
	xsubcmds:  cond.    (20)

	.  reduce 20 (src line 160)


state 96
	simple:  TEEBLK subcmds '}'.    (38)

	.  reduce 38 (src line 292)


state 97
	simple:  FOR names '{'.$$39 subcmds '}' 
	$$39: .    (39)

	.  reduce 39 (src line 297)

	$$39  goto 118

state 98
	simple:  WHILE pipe '{'.$$41 subcmds '}' 
	$$41: .    (41)

	.  reduce 41 (src line 313)

	$$41  goto 119

state 99
	name:  name.'^' name 
	name:  name '^' name.    (88)

	.  reduce 88 (src line 599)


state 100
	name:  '$' NAME '['.NAME ']' 

	NAME  shift 120
	.  error


state 101
	name:  '$' '^' NAME.    (85)

	.  reduce 85 (src line 584)


state 102
	inblk:  INBLK $$66 pipe.'}' 

	'}'  shift 121
	.  error


state 103
	inblk:  RAWINBLK $$68 pipe.'}' 

	'}'  shift 122
	.  error


state 104
	inblk:  SINGLEINBLK $$70 pipe.'}' 

	'}'  shift 123
	.  error


state 105
	inblk:  PIPEBLK $$72 pipe.'}' 

	'}'  shift 124
	.  error


state 106
	func:  FUNC NAME '{' subcmds.'}' 

	'}'  shift 125
	.  error


state 107
	xpipe:  xpipe pipeop optname $$32.opt_nl simplerdr 
	opt_nl: .    (24)

	NL  shift 127
	.  reduce 24 (src line 192)

	opt_nl  goto 126

state 108
	optname:  '[' NAME.']' 

	']'  shift 128
	.  error


state 109
	var:  NAME '=' '{' names.'}' 
	names:  names.name 
	names:  names.inblk 

	NAME  shift 49
	INBLK  shift 30
	RAWINBLK  shift 31
	SINGLEINBLK  shift 32
	PIPEBLK  shift 33
	LEN  shift 29
	'}'  shift 129
	'$'  shift 28
	.  error

	name  goto 62
	inblk  goto 63

state 110
	var:  NAME '=' '{' maps.'}' 
	maps:  maps.map 

	'}'  shift 130
	'['  shift 112
	.  error

	map  goto 131
